# ddiscord

./: .gitignore  LICENSE  README.md  ddiscord.py  pyproject.toml
src/ddiscord/: __init__.py  client.py  ddiscord.py  debugger.py  token.py
